# DSI-Project

./: .gitignore  CMakeLists.txt  readme.md  run_mpi.sh
src/: LLM.cpp  LLM.h  constants.h  main.cpp  omp_config.h  test  test.cpp
src/chat/: TUI.cpp  TUI.h
src/comm/: Comm.cpp  Comm.h  Protocol.cpp  Protocol.h
src/handling/: Drafter.cpp  Drafter.h  Reviewer.cpp  Reviewer.h
src/llm/: LLM.cpp  LLM.h  Tokenizer.cpp  Tokenizer.h
src/llm/eviction/: EvictionKV.h  SlidingWindow.cpp  SlidingWindow.h
src/processes/: Process.cpp  Process.h
src/processes/handlers/: Drafter.cpp  Drafter.h  Orchestrator.cpp  Orchestrator.h  Target.cpp  Target.h
src/processes/handlers/drafter/: Drafter.h
src/processes/handlers/frontend/: Frontend.cpp  Frontend.h
src/processes/handlers/orchestrator/: Orchestrator.cpp  Orchestrator.h  VerificationPool.cpp  VerificationPool.h
src/session/: Session.cpp  Session.h
src/types/: DraftBatch.h
src/ui/: UI.cpp  UI.h
src/ui/chat/: ChatTUI.cpp  ChatTUI.h
src/ui/cli/: CLI.cpp  CLI.h
src/utilities/: Math.cpp  Math.h
